--- a/AI Python for Beginners/2-Automating Tasks with Python/Lesson_1.ipynb
+++ b/AI Python for Beginners/2-Automating Tasks with Python/Lesson_1.ipynb
@@ -536,7 +536,7 @@
     "# of five of your favorite movies\n",
     "\n",
     "### WRITE CODE HERE ###\n",
-    "movie_list = \n",
+    "movie_list = 0kladjfa\\\\\n",
     "### --------------- ###"
    ]
   },
